updated pre tag to fix overflow issue in code section

--- a/static/css/layout/index.less
+++ b/static/css/layout/index.less
@@ -15,7 +15,10 @@ div#contentBody {
   img {
     max-width: 100%;
   }
-  p {
+  pre {
+    overflow-x: auto;
+  }
+  p a {
     word-wrap: break-word;
   }
 }
